--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ dependencies = [
     "pydantic>=2.0",
     "pydantic-settings>=2.0",
     "rich>=13.0",
-    "litellm>=2.0",
-    "dspy>=2.0",
+    "litellm>=1.0,<2.0",
+    "dspy>=2.0,<3.0",
     "pyyaml>=6.0",
 ]
 
